[metadata]
name = OpenDb
description = OpenDb fromo OpenROAD project
long_description = file: README.md
long_description_content_type = text/markdown
author = Jon Pry
author_email = jonpry@gmail.com
license = MIT
platforms = any
url = https://github.com/jonpry/OpenDb
project_urls =
    Source  = https://github.com/jonpry/OpenDb/tree/master/
    Tracker = https://github.com/jonpry/OpenDb/issues
keywords = setuptools extension cpp cmake build package pypi bindings swig pybind11
classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
    # This requirement is only necessary if the build_extension_env
    # context manager is used in the top-level __init__.py
    cmake-build-extension

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-icdiff
all =
    %(test)s



